<!--
/*
 * Copyright (c) 2023 Christian Kierdorf
 *
 * Permission is hereby granted, free of charge, to any person obtaining a
 * copy of this software and associated documentation files (the “Software”),
 * to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
 * sell copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND,
 * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
 * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
 * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
 * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 * OTHER DEALINGS IN THE SOFTWARE.
 *
 */
-->
<resources>
    <string name="app_name">Let\'s Bend</string>
    <string name="action_settings">Settings</string>
    <string name="about_title">Let\'s Bend</string>
    <string name="action_about">About</string>
    <string name="action_harp">Let\'s Bend</string>
    <string name="about_description">Android version of BluesHarpBendingApp</string>
    <string name="about_version">%1$s (%2$d)</string>
    <string name="settings_key_label">Key</string>
    <string name="settings_tune_label">Tuning</string>
    <string name="settings_pitches_label">Concert Pitch</string>
    <string name="settings_reset_label">Reset Settings</string>
    <string name="settings_reset_button">Reset</string>
    <string name="settings_screenlock_label">Keep screen on</string>
    <string name="permission_information_message">To utilize the application properly, access to the microphone is
        necessary. If you have any doubts, check the privacy policy for this application.
    </string>
    <string name="permission_information_title">Information</string>
    <string name="permission_information_button_label">Proceed anyway</string>
    <string name="settings_algo_label">Algorithm</string>
    <string name="action_training">Training</string>
    <string name="action_tuner">Tuner</string>
    <string name="training_start_button">Start</string>
    <string name="training_stop_button">Stop</string>
    <string name="training_trainings_label">Scale</string>
    <string name="training_precision_label">Precision</string>
    <string name="training_progress_label">Progress</string>
    <string name="settings_conf_label">Confidence</string>

    <!-- Settings screen section headers -->
    <string name="settings_harp_header">Harp Settings</string>
    <string name="settings_microphone_header">Microphone Settings</string>
    <string name="settings_app_header">App Settings</string>

    <!-- Training screen section headers -->
    <string name="training_note_header">Note Display</string>
    <string name="training_settings_header">Training Settings</string>
    <string name="training_control_header">Training Control</string>

    <!-- Tuner screen strings -->
    <string name="tuner_start_button">Start Tuning</string>
    <string name="tuner_stop_button">Stop Tuning</string>
    <string name="tuner_listening">Listening...</string>
    <string name="tuner_start_prompt">Start tuning to detect notes</string>
    <string name="tuner_in_tune">In tune!</string>
    <string name="tuner_slightly_flat">Slightly flat</string>
    <string name="tuner_slightly_sharp">Slightly sharp</string>
    <string name="tuner_too_flat">Too flat</string>
    <string name="tuner_too_sharp">Too sharp</string>
    <string name="tuner_stopped">Tuning stopped</string>
    <string name="tuner_cents_format">%d cents</string>
    <string name="tuner_note_format">Note: %s</string>
    <string name="tuner_frequency_format">Frequency: %d Hz</string>
    <string name="tuning_key_info_format">%1$s | %2$s</string>
    <string name="about_user_guide">User Guide</string>
</resources>
