<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (c) 2023 Christian Kierdorf
 *
 * Permission is hereby granted, free of charge, to any person obtaining a
 * copy of this software and associated documentation files (the “Software”),
 * to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
 * sell copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND,
 * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
 * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
 * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
 * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 * OTHER DEALINGS IN THE SOFTWARE.
 *
 */
-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            app:startDestination="@id/HarpFragment">

    <fragment
            android:id="@+id/HarpFragment"
            android:name="de.schliweb.bluesharpbendingapp.view.android.HarpFragment"
            android:label="@string/action_harp"
            tools:layout="@layout/fragment_harp">

        <action
                android:id="@+id/action_to_HarpFragment"
                app:destination="@id/HarpFragment"/>

        <action
                android:id="@+id/action_to_SettingsFragment"
                app:destination="@id/SettingsFragment"/>

        <action
                android:id="@+id/action_to_AboutFragment"
                app:destination="@id/AboutFragment"/>


    </fragment>
    <fragment
            android:id="@+id/SettingsFragment"
            android:name="de.schliweb.bluesharpbendingapp.view.android.SettingsFragment"
            android:label="@string/action_settings"
            tools:layout="@layout/fragment_settings">

        <action
                android:id="@+id/action_to_HarpFragment"
                app:destination="@id/HarpFragment"/>

        <action
                android:id="@+id/action_to_SettingsFragment"
                app:destination="@id/SettingsFragment"/>

        <action
                android:id="@+id/action_to_AboutFragment"
                app:destination="@id/AboutFragment"/>
    </fragment>
    <fragment
            android:id="@+id/AboutFragment"
            android:name="de.schliweb.bluesharpbendingapp.view.android.AboutFragment"
            android:label="@string/action_about"
            tools:layout="@layout/fragment_settings">

        <action
                android:id="@+id/action_to_HarpFragment"
                app:destination="@id/HarpFragment"/>

        <action
                android:id="@+id/action_to_SettingsFragment"
                app:destination="@id/SettingsFragment"/>

        <action
                android:id="@+id/action_to_AboutFragment"
                app:destination="@id/AboutFragment"/>
    </fragment>
</navigation>