<?xml version="1.0" encoding="utf-8"?><!--
/*
 * Copyright (c) 2023 Christian Kierdorf
 *
 * Permission is hereby granted, free of charge, to any person obtaining a
 * copy of this software and associated documentation files (the “Software”),
 * to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
 * sell copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND,
 * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
 * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
 * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
 * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 * OTHER DEALINGS IN THE SOFTWARE.
 *
 */
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/training_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.android.TrainingFragment">

    <LinearLayout
        android:id="@+id/linearLayoutLeft"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toStartOf="@+id/tableLayoutRight"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/training_note"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/note_channel"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?attr/blowTextColor"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tableLayoutRight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutLeft">

        <TextView
            android:id="@+id/training_trainings_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training_trainings_label"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:id="@+id/training_trainings_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/training_precision_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training_precision_label"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:id="@+id/training_precision_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"/>

        <TextView
            android:id="@+id/training_progress_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training_progress_label"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:progress="0"/>


        <Button
            android:id="@+id/training_start_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/training_start_button"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:strokeColor="?attr/buttonStrokeColor"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
